--- a/.gitignore
+++ b/.gitignore
@@ -1,97 +1,57 @@
-import React, { ReactNode, useRef } from "react";
-import FlagIcon from "@/app/assets/svg/flag.svg";
-import CheckIcon from "@/app/assets/svg/check.svg";
-import FlagGreenIcon from "@/app/assets/svg/flag-green.svg";
-import CloseGrayIcon from "@/app/assets/svg/close-gray.svg";
-import CloseWhiteIcon from "@/app/assets/svg/close-white.svg";
-import ChevronLeftLargeIcon from "@/app/assets/svg/chevron-left-large.svg";
-import ChevronRightLargeIcon from "@/app/assets/svg/chevron-right-large.svg";
-import WrapperIcon from "@/app/assets/svg/Wrapper.svg"; // novo ícone quadrado
-import { StaticImageData } from "next/image";
-import Image from "next/image";
+// …imports mantidos…
 
-type StatusType = "waiting" | "pending" | "completed" | "canceled" | "skipped";
+type StatusType =
+  | "waiting"
+  | "pending"
+  | "completed"
+  | "canceled"
+  | "skipped"
+  | "done";               // ← opcional: se quiser manter a tipagem exata
 
-interface TimelineProps {
-  children?: ReactNode;
-}
+// util simples (pode colocar no topo do arquivo)
+const normalizeStatus = (s: StatusType | undefined): StatusType =>
+  s === "done" ? "completed" : (s ?? "waiting");
 
-interface StepProps {
-  status?: StatusType;
-  progress?: boolean;
-  children?: ReactNode;
-}
-
-//
-// Root & Scroll
-//
-export const TimelineRoot: React.FC<TimelineProps> = ({ children }) => (
-  <div className="flex">{children}</div>
-);
-
-export const TimelineScroll: React.FC<TimelineProps> = ({ children }) => {
-  const scrollRef = useRef<HTMLDivElement>(null);
-  const scroll = (delta: number) => {
-    if (scrollRef.current) scrollRef.current.scrollLeft += delta;
-  };
-  return (
-    <div className="flex items-center">
-      <button
-        onClick={() => scroll(-100)}
-        className="w-[37px] h-[56px] flex items-center justify-center rounded border border-[#DBDBDB] bg-white"
-      >
-        <ChevronLeftLargeIcon />
-      </button>
-      <div
-        ref={scrollRef}
-        className="flex gap-[10px] w-full overflow-x-auto whitespace-nowrap scroll-smoth"
-      >
-        {children}
-      </div>
-      <button
-        onClick={() => scroll(100)}
-        className="w-[37px] h-[56px] flex items-center justify-center rounded border border-[#DBDBDB] bg-white"
-      >
-        <ChevronRightLargeIcon />
-      </button>
-    </div>
-  );
-};
-
-//
-// Circle
-//
+/* ------------------------------------------------------------------ */
+/* CÍRCULO ----------------------------------------------------------- */
+/* ------------------------------------------------------------------ */
 export const TimelineCircle: React.FC<Pick<StepProps, "status">> = ({
-  status = "waiting",
+  status,
 }) => {
-  const IconMap: Record<StatusType, StaticImageData> = {
+  const safeStatus = normalizeStatus(status);
+
+  const IconMap: Record<Exclude<StatusType, "done">, StaticImageData> = {
     waiting: FlagIcon,
     pending: FlagGreenIcon,
     completed: CheckIcon,
     canceled: CloseWhiteIcon,
     skipped: CloseGrayIcon,
   };
-  const BorderColorMap: Record<StatusType, string> = {
+
+  const BorderColorMap: Record<typeof safeStatus, string> = {
     waiting: "#DBDBDB",
     pending: "#008056",
     completed: "#008056",
     canceled: "#CA303D",
     skipped: "#DBDBDB",
   };
-  const BgColorMap: Record<StatusType, string> = {
+
+  const BgColorMap: Record<typeof safeStatus, string> = {
     waiting: "#FFFFFF",
     pending: "#FFFFFF",
     completed: "#008056",
     canceled: "#CA303D",
     skipped: "#F7F7F8",
   };
-  const Icon = IconMap[status];
+
+  const Icon = IconMap[safeStatus as keyof typeof IconMap];
+
   return (
     <div
       className="w-[56px] h-[56px] flex items-center justify-center rounded-full"
       style={{
-        border: `1px solid ${BorderColorMap[status]}`,
-        backgroundColor: BgColorMap[status],
+        border: `1px solid ${BorderColorMap[safeStatus]}`,
+        backgroundColor: BgColorMap[safeStatus],
       }}
     >
       <Image src={Icon} alt="icon" />
@@ -99,93 +59,37 @@ export const TimelineCircle: React.FC<Pick<StepProps, "status">> = ({
   );
 };
 
-//
-// Link (quadrado com hoverContent)
-//
-export interface TimelineLinkProps {
-  status?: StatusType;
-  hoverContent?: ReactNode;
-}
-
-export const TimelineLink: React.FC<TimelineLinkProps> = ({
-  status = "waiting",
-  hoverContent,
-}) => {
-  const BorderColorMap: Record<StatusType, string> = {
-    waiting: "#DBDBDB",
-    pending: "#008056",
-    completed: "#008056",
-    canceled: "#CA303D",
-    skipped: "#DBDBDB",
-  };
-
-  return (
-    <div className="relative inline-block group mt-[7px]">
-      <div className="w-[28px] h-[28px] flex items-center rounded-[5px] justify-center bg-white">
-        <Image src={WrapperIcon} alt="IconWrapper" />
-      </div>
-      {hoverContent && (
-        <div
-          className="
-            absolute top-full left-1/2 -translate-x-1/2
-            mt-2 w-48 p-2 bg-white rounded shadow-lg
-            opacity-0 group-hover:opacity-100 transition-opacity
-          "
-        >
-          {hoverContent}
-        </div>
-      )}
-    </div>
-  );
-};
-
-//
-// Step & Text
-//
+/* ------------------------------------------------------------------ */
+/* STEP (barrinha de progresso usa o status para cor) ---------------- */
+/* ------------------------------------------------------------------ */
 export const TimelineStep: React.FC<StepProps> = ({
-  status = "waiting",
+  status,
   progress = false,
   children,
 }) => {
-  const BorderColorMap: Record<StatusType, string> = {
+  const safeStatus = normalizeStatus(status);
+
+  const BorderColorMap: Record<Exclude<StatusType, "done">, string> = {
     waiting: "#DBDBDB",
     pending: "#008056",
     completed: "#008056",
     canceled: "#CA303D",
     skipped: "#DBDBDB",
   };
-  const borderColor = BorderColorMap[status];
 
   return (
-    <div
-      className="relative flex-none flex flex-col items-center"
-      style={{ width: 150 }}
-    >
+    <div className="relative flex-none flex flex-col items-center" style={{ width: 150 }}>
       {progress && (
         <div
-          className="absolute  border-b left-[calc(55%+20px)] top-[46%] -translate-y-1/2 w-[calc(100%+10px-41px)]"
-          style={{ borderColor }}
+          className="absolute border-b left-[calc(55%+20px)] top-[46%] -translate-y-1/2 w-[calc(100%+10px-41px)]"
+          style={{ borderColor: BorderColorMap[safeStatus as keyof typeof BorderColorMap] }}
         />
       )}
-      <div className="relative flex flex-col items-center gap-2">
-        {children}
-      </div>
+      <div className="relative flex flex-col items-center gap-2">{children}</div>
     </div>
   );
 };
 
-export const TimelineText: React.FC<TimelineProps> = ({ children }) => (
-  <span className="text-[12px] font-normal leading-[18px] text-[#484A55] text-center font-figtree tracking-[0.12px] ">
-    {children}
-  </span>
-);
-
-const Timeline = {
-  Scroll: TimelineScroll,
-  Root: TimelineRoot,
-  Step: TimelineStep,
-  Circle: TimelineCircle,
-  Link: TimelineLink,
-  Text: TimelineText,
-};
-export default Timeline;
+/* ------------------------------------------------------------------ */
+/* OS OUTROS COMPONENTES (Link, Text, etc.) permanecem iguais -------- */
+/* ------------------------------------------------------------------ */
